--- a/vignettes/benchmarking.Rmd
+++ b/vignettes/benchmarking.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r libraries}
 library(microbenchmark)
-library(chipVis)
+library(GenomicWidgets)
 library(genomation)
 library(GenomicRanges)
 ```
