--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -4,14 +4,13 @@ author: "Alicia Schep"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Introduction}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, figure.width = 3, figure.height = 2)
-
+knitr::opts_chunk$set(echo = TRUE, figure.width = 6, figure.height = 5)
 ```
 
 # Package goals
@@ -22,7 +21,7 @@ The GenomicWidgets package enables the creation of interactive visualizations fo
 
 In addition to GenomicWidgets, we will load a few other packages for use in this vignette. 
 
-```{r}
+```{r, message = FALSE}
 library(GenomicWidgets)
 library(iheatmapr)
 library(GenomicRanges)
@@ -110,6 +109,7 @@ ctcf.peaks <- ctcf.peaks[order(-ctcf.peaks$signalValue)]
 ctcf.peaks <- resize(ctcf.peaks, width = 501, fix = "center")
 ```
 
+
 ### Making coverage matrices
 
 We first will make coverage matrices.  These will be returned as RangedSummarizedExperiment objects.  
@@ -134,6 +134,20 @@ Here we will create a single coverage heatmap for the CTCF ChIP-seq.
 
 ```{r}
 coverage_heatmap(ctcf_mats, "Ctcf")
+```
+
+### Scaling methods
+
+By default, the coverage matrix shown in the heatmap is scaled by the root mean squared value of the row.  This can be adjusted by modifying the scale_method argument.  For example, to scale based off the 95th percentile value in the matrix: 
+
+```{r}
+coverage_heatmap(ctcf_mats, "Ctcf", scale_method = "PercentileMax")
+```
+
+You can obained the scaled coverage matrices by using the `normalize_coverage_matrix` function.
+
+```{r}
+normed_ctcf_mats <- normalize_coverage_matrix(ctcf_mats, method = "PercentileMax")
 ```
 
 ### Adding coverage heatmap
@@ -192,13 +206,66 @@ track_plotter <- make_track_plotter(samp.info$fileName[1:3],
 ```
 
 ```{r}
-track_plotter(resize(ctcf.peaks[1], width = 10000, fix = "center"))
+track_plotter(resize(ctcf.peaks[2], width = 10000, fix = "center"))
 ```
 
 ## Multiple regions
 
 ```{r}
 track_plotter(resize(ctcf.peaks[1:5], width = 10000, fix = "center"))
+```
+
+## Options
+
+### Passing more arguments
+
+```{r}
+track_plotter(resize(ctcf.peaks[2], width = 10000, fix = "center"),
+              showlegend = FALSE)
+```
+
+## Annotation position
+
+```{r}
+track_plotter(resize(ctcf.peaks[2], width = 10000, fix = "center"),
+              annotation_position = "top")
+```
+
+### Grouping
+
+```{r}
+track_plotter2 <- make_track_plotter(samp.info$fileName[1:4], 
+                                    annotation = 
+                                      TxDb.Hsapiens.UCSC.hg19.knownGene, 
+                                    track_names = samp.info$sampleName[1:4], 
+                                    share_y = TRUE,
+                                    groups = c("CTCF & cohesin","P300","Suz12","CTCF & cohesin"))
+```
+
+```{r}
+track_plotter2(resize(ctcf.peaks[2], width = 10000, fix = "center"))
+```
+
+Note that at the moment grouping is ignored when plotting multiple loci -- all tracks for the locus will be grouped together.
+
+```{r}
+track_plotter2(resize(ctcf.peaks[1:3], width = 10000, fix = "center"))
+```
+
+### Locus names
+
+```{r}
+track_plotter(resize(ctcf.peaks[1:2], width = 10000, fix = "center"),
+              name = c("Peak 1","Peak 2"))
+```
+
+### Colors
+
+You can change the colors of the tracks by passing a `colors` argument.  
+
+```{r}
+track_plotter(resize(ctcf.peaks[1], width = 10000, fix = "center"),
+              colors = c("red","blue","black"))
 ```
 
 ## Add in gene or locus level summaries
@@ -225,14 +292,22 @@ Calling our combined plotter function with some rownames of the expression data 
 combined_plotter(rownames(rpkm_chr21)[1:3])
 ```
 
+### Options
+
+The properties of the tracks or summary plots can be altered by adding track_args or summary_args arguments.
+
+```{r}
+combined_plotter(rownames(rpkm_chr21)[1:3], 
+                 track_args = list(name = rowData(rpkm_chr21)$SYMBOL[1:3]),
+                 summary_args = list(colors = "black"))
+```
+
 
 # Apps linking heatmaps to genome tracks
 
 We can link our heatmap views of many genes/regions with the more detailed track views by making a shiny app that links the two through a click event.  We will need both our heatmap object, a track generator function, and a link function that helps link the heatmap to the track view.  The link function takes as input the heatmap as well as the potential input for the track function.  That input should be ordered according to how the rows were ordered in the input data for the heatmap.  
 
-Note: The following code has to be run interactively!
-
-```{r, eval= FALSE}
+```{r}
 hm <- iheatmap(rpkm_chr21, "rpkm",
          x = colData(rpkm_chr21)$STD_NAME, 
          y = rowData(rpkm_chr21)$SYMBOL, 
@@ -241,16 +316,19 @@ hm <- iheatmap(rpkm_chr21, "rpkm",
 
 link_fn <- heatmap_click(hm, rownames(rpkm_chr21))
 
-heatmap_to_tracks_shiny(hm, combined_plotter, link_fn)
-
 ```
+
+Note: The following code has to be run interactively!
+
+```{r, eval= FALSE}
+heatmap_to_tracks_shiny(hm, combined_plotter, link_fn)
+```
+
 
 ## To do
 
 * Easier Customization of y axis labels
 * Easier customization of x axis labels
-* add description of grouping options, fine-tune
-* check color handling
 
 
 
