--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -54,6 +54,13 @@ The package includes a small subset of the expression data from the Roadmap Epig
 data("rpkm_chr21")
 ```
 
+We'll subset to use just the first 100 genes.
+
+```{r}
+rpkm_chr21 <- rpkm_chr21[1:100,]
+```
+
+
 If we call the `iheatmap` method on a SummarizedExperiment object, we obtain the following heatmap:
 
 ```{r}
@@ -109,6 +116,11 @@ ctcf.peaks <- ctcf.peaks[order(-ctcf.peaks$signalValue)]
 ctcf.peaks <- resize(ctcf.peaks, width = 501, fix = "center")
 ```
 
+We'll limit ourselves to considering 100 of the peaks.
+
+```{r}
+ctcf.peaks <- ctcf.peaks[1:100]
+```
 
 ### Making coverage matrices
 
@@ -195,68 +207,85 @@ iheatmap(rpkm_chr21, "rpkm",
 
 GenomicWidgets also has functions for interactive local views of genomic signals.  
 
-## Track plotter
+## Set track parameters
+
+For plotting genomic signals as tracks, first you specify the source of the data and other options.  
 
 ```{r}
-track_plotter <- make_track_plotter(samp.info$fileName[1:3], 
+track_params <- set_track_parameters(samp.info$fileName[1:3], 
                                     annotation = 
                                       TxDb.Hsapiens.UCSC.hg19.knownGene, 
                                     track_names = samp.info$sampleName[1:3], 
                                     share_y = TRUE)
 ```
 
+Those parameters can then be passed along with a range to generate the interactive genome track plot.  
+
 ```{r}
-track_plotter(resize(ctcf.peaks[2], width = 10000, fix = "center"))
+plot_tracks(resize(ctcf.peaks[2], width = 10000, fix = "center"), track_params)
 ```
 
 ## Multiple regions
 
+You can easily plot multiple regions by passing along several ranges rather than a single range.  
+
 ```{r}
-track_plotter(resize(ctcf.peaks[1:5], width = 10000, fix = "center"))
+plot_tracks(resize(ctcf.peaks[1:4], width = 10000, fix = "center"), track_params)
 ```
+
 
 ## Options
 
 ### Passing more arguments
 
+You can over-ride parameters set by set_track_parameters by passing them again to plot_tracks
+
 ```{r}
-track_plotter(resize(ctcf.peaks[2], width = 10000, fix = "center"),
+plot_tracks(resize(ctcf.peaks[2], width = 10000, fix = "center"),
+            track_params,
               showlegend = FALSE)
 ```
 
-## Annotation position
+### Annotation position
 
 ```{r}
-track_plotter(resize(ctcf.peaks[2], width = 10000, fix = "center"),
+plot_tracks(resize(ctcf.peaks[2], width = 10000, fix = "center"),
+            track_params,
               annotation_position = "top")
 ```
 
 ### Grouping
 
-```{r}
-track_plotter2 <- make_track_plotter(samp.info$fileName[1:4], 
-                                    annotation = 
-                                      TxDb.Hsapiens.UCSC.hg19.knownGene, 
-                                    track_names = samp.info$sampleName[1:4], 
-                                    share_y = TRUE,
-                                    groups = c("CTCF & cohesin","P300","Suz12","CTCF & cohesin"))
-```
+You can group multiple signal together on one set of axes by using the groups argument.
 
 ```{r}
-track_plotter2(resize(ctcf.peaks[2], width = 10000, fix = "center"))
+track_params_grouped <- 
+  set_track_parameters(samp.info$fileName[1:4], 
+                       annotation = TxDb.Hsapiens.UCSC.hg19.knownGene, 
+                       track_names = samp.info$sampleName[1:4], 
+                       share_y = TRUE,
+                       groups = c("CTCF & cohesin","P300","Suz12",
+                                  "CTCF & cohesin"))
+
+plot_tracks(resize(ctcf.peaks[2], width = 10000, fix = "center"), 
+            track_params_grouped)
 ```
 
 Note that at the moment grouping is ignored when plotting multiple loci -- all tracks for the locus will be grouped together.
 
 ```{r}
-track_plotter2(resize(ctcf.peaks[1:3], width = 10000, fix = "center"))
+plot_tracks(resize(ctcf.peaks[1:3], width = 10000, fix = "center"), 
+            track_params_grouped)
 ```
 
 ### Locus names
 
+When plotting multiple regions, by default the name is taken from "name" column in the ranges (if it exists). You can alter that by passing something to the locus_names argument.
+
 ```{r}
-track_plotter(resize(ctcf.peaks[1:2], width = 10000, fix = "center"),
-              name = c("Peak 1","Peak 2"))
+plot_tracks(resize(ctcf.peaks[1:2], width = 10000, fix = "center"),
+            track_params,
+            locus_names = c("Peak 1","Peak 2"))
 ```
 
 ### Colors
@@ -264,48 +293,62 @@ track_plotter(resize(ctcf.peaks[1:2], width = 10000, fix = "center"),
 You can change the colors of the tracks by passing a `colors` argument.  
 
 ```{r}
-track_plotter(resize(ctcf.peaks[1], width = 10000, fix = "center"),
-              colors = c("red","blue","black"))
+plot_tracks(resize(ctcf.peaks[1], width = 10000, fix = "center"),
+            track_params,
+            colors = c("red","blue","black"))
 ```
 
 ## Add in gene or locus level summaries
 
-We can add a boxplot next to each region summarizing the gene expression levels (or any other feature of the locus) for some group of samples.  We do that by first creating a function to generate such a summary based on a SummarizedExperiment object.  We pass along to the `group` argument the name of a column in the colData of the SummarizedExperiment object that we will use to group the expression values along the x axis.  
+We can add a boxplot next to each region summarizing the gene expression levels (or any other feature of the locus) for some group of samples.  We do that by first specifying the parameters to generate such a summary based on a SummarizedExperiment object.  We pass along to the `group` argument the name of a column in the colData of the SummarizedExperiment object that we will use to group the expression values along the x axis. The ranges argument tells what ranges correspond to what rows of the SummarizedExperiment. By default, if the SummarizedExperiment is a RangedSummarizedExperiment then the rowRanges are used.  
 
 ```{r}
-summary_plotter <- make_summary_plotter(rpkm_chr21,
-                                        groups = "GROUP")
+summary_params <- set_summary_parameters(rpkm_chr21,
+                                        groups = "GROUP",
+                                        ranges = resize(tss, width = 5000, fix = "center"))
+```
+
+We pass the summary parameters to our track parameters, via the summary argument.
+ 
+```{r}
+track_plus_summary_params <-  set_track_parameters(samp.info$fileName[1:3], 
+                                    annotation = 
+                                      TxDb.Hsapiens.UCSC.hg19.knownGene, 
+                                    track_names = samp.info$sampleName[1:3], 
+                                    share_y = TRUE,
+                                    summary = summary_params)
 ```
 
 We use the function `make_track_plus_summary_plotter` to link our track plotter and our summary plotter.  We give both of the plot generators, as well as the ranges that correspond to all the rows of the expression data and the rownames of the expression data.  
 
+
+Calling `plot_tracks` with our new track parameters including the summary parameters creates a plot of the ChIP-seq signal around the TSS of those genes as well as a boxplot of the gene expression for different samples for that gene on the right. We can call it using GenomicRanges, but they must match ranges we gave to `set_summary_parameters`. 
+
 ```{r}
-combined_plotter <- make_track_plus_summary_plotter(track_plotter, 
-                                                    summary_plotter,
-                                                    resize(tss, width = 5000, fix = "center"),
-                                                    rownames(rpkm_chr21))
+plot_tracks(resize(tss, width = 5000, fix = "center")[1:3], track_plus_summary_params)
 ```
 
-Calling our combined plotter function with some rownames of the expression data creates a plot of the ChIP-seq signal around the TSS of those genes as well as a boxplot of the gene expression for different samples for that gene on the right.  
+We can also instead call `plot_tracks` with rownames of the SummarizedExperiment we passed to `set_summary_parameters`.
 
 ```{r}
-combined_plotter(rownames(rpkm_chr21)[1:3])
+plot_tracks(rownames(rpkm_chr21)[1:3], track_plus_summary_params)
 ```
 
 ### Options
 
-The properties of the tracks or summary plots can be altered by adding track_args or summary_args arguments.
+The properties of the summary plots can be altered by adding a named list of new parameter values to the summary_args argument. For example, we can alter the color:
 
 ```{r}
-combined_plotter(rownames(rpkm_chr21)[1:3], 
-                 track_args = list(name = rowData(rpkm_chr21)$SYMBOL[1:3]),
-                 summary_args = list(colors = "black"))
+plot_tracks(resize(tss, width = 5000, fix = "center")[1:3], 
+            track_plus_summary_params,
+            summary_args = list(colors = "black"))
+
 ```
 
 
 # Apps linking heatmaps to genome tracks
 
-We can link our heatmap views of many genes/regions with the more detailed track views by making a shiny app that links the two through a click event.  We will need both our heatmap object, a track generator function, and a link function that helps link the heatmap to the track view.  The link function takes as input the heatmap as well as the potential input for the track function.  That input should be ordered according to how the rows were ordered in the input data for the heatmap.  
+We can link our heatmap views of many genes/regions with the more detailed track views by making a shiny app that links the two through a click event.  We will need both our heatmap object, a track parameters object, and a link function that helps link the heatmap to the track view.  The link function takes as input the heatmap as well as the potential input for `plot_tracks`.  That input should be ordered according to how the rows were ordered in the input data for the heatmap.  
 
 ```{r}
 hm <- iheatmap(rpkm_chr21, "rpkm",
@@ -321,13 +364,12 @@ link_fn <- heatmap_click(hm, rownames(rpkm_chr21))
 Note: The following code has to be run interactively!
 
 ```{r, eval= FALSE}
-heatmap_to_tracks_shiny(hm, combined_plotter, link_fn)
+heatmap_to_tracks_shiny(hm, track_plus_summary_params, link_fn)
 ```
 
 
 ## To do
 
-* Easier Customization of y axis labels
 * Easier customization of x axis labels
 
 
