--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -10,7 +10,7 @@ vignette: >
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, figure.width = 6, figure.height = 5)
+knitr::opts_chunk$set(echo = TRUE, fig.width = 6, fig.height = 5)
 ```
 
 # Package goals
